# binge-graphql

./: Dockerfile  README.md  docker_build.sh  pyproject.toml  requirements.txt
src/: app.py  constants.py  gql_errors.py  gql_objects.py  models.py  queries.py
test_queries/: mutations.graphql  query_all_movies.graphql  query_all_reviews.graphql  query_get_user.graphql
